# budi

./: .budiignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENDPOINT_REVIEW.md  README.md  SOUL.md  deny.toml
.claude/: adr-evidence-first-pivot.md  pivot-experiment-matrix.md
.claude-plugin/: marketplace.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
assets/: demo.tape
cloud/: package-lock.json  package.json
crates/budi-bench/: Cargo.toml
crates/budi-bench/src/: main.rs
crates/budi-cli/: Cargo.toml  build.rs
crates/budi-cli/src/: client.rs  daemon.rs  main.rs  mcp.rs  prompt_controls.rs  retrieval_eval.rs
crates/budi-cli/src/client/: tests.rs
crates/budi-cli/src/commands/: autostart.rs  cloud.rs  db.rs  doctor.rs  health.rs  hook.rs  import.rs  init.rs  insights.rs  integrations.rs  launch.rs  mcp.rs  mod.rs  open.rs  pricing.rs  proxy_install.rs  repair.rs  repo.rs  sessions.rs  stats.rs  status.rs  statusline.rs  sync.rs  uninstall.rs  update.rs  vitals.rs
crates/budi-cli/src/commands/doctor/: mod.rs  tests.rs
crates/budi-cli/src/commands/stats/: mod.rs  tests.rs
crates/budi-cli/src/main/: tests.rs
crates/budi-core/: Cargo.toml
crates/budi-core/src/: analytics.rs  autostart.rs  chunking.rs  claude_data.rs  cloud_sync.rs  config.rs  cost.rs  daemon.rs  file_attribution.rs  fs_util.rs  git.rs  hooks.rs  identity.rs  index.rs  index_scope.rs  ingest_queue.rs  insights.rs  installer_residue.rs  integrations.rs  jsonl.rs  legacy_proxy.rs  lib.rs  migration.rs  otel.rs  pre_filter.rs  privacy.rs  project_map.rs  prompt_controls.rs  provider.rs  proxy.rs  reason_codes.rs  repo_id.rs  reranker.rs  retrieval.rs  rpc.rs  session_resolve.rs  surface.rs  tag_keys.rs  update.rs  work_outcome.rs
crates/budi-core/src/analytics/: health.rs  mod.rs  queries.rs  sessions.rs  sync.rs  tests.rs
crates/budi-core/src/analytics/queries/: breakdowns.rs  dimensions.rs  helpers.rs  mod.rs  summary.rs
crates/budi-core/src/analytics/sync/: tests.rs
crates/budi-core/src/cloud_sync/: mod.rs  tests.rs
crates/budi-core/src/pipeline/: emit.rs  enrichers.rs  mod.rs
crates/budi-core/src/pricing/: display.rs  mod.rs  pricing_tests.rs  team.rs
crates/budi-core/src/providers/: claude_code.rs  codex.rs  copilot.rs  copilot_chat.rs  cursor.rs  jetbrains_ai_assistant.rs  mod.rs
crates/budi-core/src/providers/copilot_chat/: jetbrains.rs  mod.rs  tests.rs
crates/budi-core/src/providers/copilot_chat/fixtures/: jetbrains_copilot_1_5_53_243.expected.json  jetbrains_copilot_1_5_53_243.shape.md  jetbrains_nitrite_working_set_phase2.shape.md  vscode_chat_0_47_0.expected.json  vscode_chat_0_47_0.jsonl  vscode_chat_0_47_0.workspace.json  vscode_chat_0_47_0_streaming.jsonl  vscode_chat_0_47_0_v5.jsonl
crates/budi-core/src/providers/copilot_chat/fixtures/jetbrains_copilot_1_5_53_243_empty_session/: 00000000000.xd  copilot-chat-nitrite.db  xd.lck
crates/budi-core/src/providers/copilot_chat/fixtures/jetbrains_nitrite_working_set_phase2/: copilot-agent-sessions-nitrite.db
crates/budi-core/src/providers/copilot_chat/jetbrains/: tests.rs
crates/budi-core/src/providers/cursor/: mod.rs  tests.rs
crates/budi-core/src/providers/jetbrains_ai_assistant/fixtures/: synthetic_session_v1.expected.json  synthetic_session_v1.jsonl  synthetic_session_v1.shape.md
crates/budi-core/src/repo_plugins/: common.rs  django.rs  express.rs  fastapi.rs  flask.rs  mod.rs  nextjs.rs  react.rs
crates/budi-core/src/retrieval/: context.rs
crates/budi-core/src/sync/: copilot_chat_billing.rs  mod.rs
crates/budi-daemon/: Cargo.toml  build.rs
crates/budi-daemon/src/: main.rs
crates/budi-daemon/src/routes/: analytics.rs  cloud.rs  dashboard.rs  hooks.rs  mod.rs  otel.rs  pricing.rs  proxy.rs  system.rs
crates/budi-daemon/src/workers/: cloud_sync.rs  mod.rs  pricing_refresh.rs  tailer.rs  team_pricing.rs
crates/budi-daemon/static/: dashboard.css  dashboard.html  dashboard.js
crates/budi-daemon/static/dashboard-dist/: index.html
crates/budi-daemon/static/dashboard-dist/assets/: analytics-filter-bar-B2WldMwV.js  analytics-filter-bar-CGai9oxJ.js  analytics-filter-bar-CbcZw3w3.js  chart-CIhen7-R.js  chart-D1hosu_b.js  chart-DKZRIYa0.js  charts-B6JG2dCV.js  charts-Dzb_wIK3.js  charts-vPr1J-zs.js  csv-ATUq0_qa.js  csv-BlE64vSI.js  csv-ChKZK7x9.js  index-65kbnmIC.js  index-9A67lmkt.css  index-B1r0ofiE.css  index-B3_MUovy.js  index-BaPTuju5.js  index-BamYYGaE.js  index-BchABLhx.js  index-Bd-GJhFV.css  index-BsFJiaPy.js  index-Bx8ukwah.js  index-BzkrfgHo.css  index-C0JqgC1y.css  index-C46mFXFo.js  index-CBJi3Ws3.js  index-CFWWScJ6.js  index-CGC9_u1U.css  index-CYW3Bita.js  index-CgEyl_m2.js  index-CjKQZmeU.js  index-CnlFyDr1.css  index-D1rUqw_0.js  index-D5mKaj2m.css  index-D6soszK-.css  index-DAp5EWmp.css  index-DCDRgaon.js  index-DI-T6McI.css  index-D_zCyHcu.js  index-DgZ0c1xb.js  (+33 more)
crates/budi-daemon/static/dashboard-v2-dist/: index.html
crates/budi-daemon/static/dashboard-v2-dist/assets/: index-1GMHyPiN.js  index-BBxhBpb3.js  index-Buu6hgDF.css  index-D43bAlG8.css
crates/budi-daemon/static/js/: api.js  events.js  state.js  stats.js  utils.js  views-insights.js  views-sessions.js  views-settings.js  views.js
crates/budi-mcp/: Cargo.toml
crates/budi-mcp/src/: main.rs
docs/: adr-evidence-first-pivot.md  anthropic-plugin-submission.md  architecture.md  benchmark-details.md  benchmark.md  configuration.md  design-principles.md  installer.md  pivot-experiment-matrix.md  smoke-tests-8.0.0.md  statusline-contract.md
homebrew/: budi.rb  setup-tap.sh
scripts/: ab_benchmark_runner.py  build-dashboard-v2.sh  build-dashboard.sh  bump-plugin-version.sh  coverage.sh  generate_public_benchmark_details.py  install-standalone.ps1  install-standalone.sh  install.sh  next-session-prompt.txt  observe_snapshot_runner.sh  react_eval.py  release.sh  remove-observe-launchd.sh  session_analyzer.py  setup-observe-launchd.sh  stress_test.py  toolcall_benchmark.py  uninstall-standalone.ps1  uninstall.sh  validate-cost.py  validate_costs.py
(+173 files in other folders)
