[workspace]
members = [
    "crates/budi-cli",
    "crates/budi-core",
    "crates/budi-daemon",
]
resolver = "2"

[workspace.package]
version = "8.3.9"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Ivan Seredkin"]
repository = "https://github.com/siropkin/budi"
description = "AI cost analytics for coding agents — know where your tokens and money go"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.6", default-features = false, features = ["macos_fsevent"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
