[package]
name = "budi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
budi-core = { path = "../budi-core" }
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "budi"
path = "src/main.rs"
