[package]
name = "budi-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
budi-core = { path = "../budi-core" }
chrono.workspace = true
clap.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
